pixel jump fix

--- a/CMS/static/scss/partials/filters.scss
+++ b/CMS/static/scss/partials/filters.scss
@@ -583,6 +583,7 @@
         max-height: 40vh;
         width: 100%;
         overflow-y: scroll;
+        overflow-x: hidden;
         position: absolute;
         background-color: white;
         box-shadow: 3px 3px 4px 0px rgba(0,0,0,0.4);
